crates/ruff_python_parser/tests/snapshots/invalid_semantics.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/semantic/err/rebound_comprehension_variable.py
---
  |
1 | [(a := 0) for a in range(0)]
  |   ^ Syntax Error: assignment expression cannot rebind comprehension variable
2 | {(a := 0) for a in range(0)}
3 | {(a := 0): val for a in range(0)}
  |


  |
1 | [(a := 0) for a in range(0)]
2 | {(a := 0) for a in range(0)}
  |   ^ Syntax Error: assignment expression cannot rebind comprehension variable
3 | {(a := 0): val for a in range(0)}
4 | {key: (a := 0) for a in range(0)}
  |


  |
1 | [(a := 0) for a in range(0)]
2 | {(a := 0) for a in range(0)}
3 | {(a := 0): val for a in range(0)}
  |   ^ Syntax Error: assignment expression cannot rebind comprehension variable
4 | {key: (a := 0) for a in range(0)}
5 | ((a := 0) for a in range(0))
  |


  |
2 | {(a := 0) for a in range(0)}
3 | {(a := 0): val for a in range(0)}
4 | {key: (a := 0) for a in range(0)}
  |        ^ Syntax Error: assignment expression cannot rebind comprehension variable
5 | ((a := 0) for a in range(0))
6 | [[(a := 0)] for a in range(0)]
  |


  |
3 | {(a := 0): val for a in range(0)}
4 | {key: (a := 0) for a in range(0)}
5 | ((a := 0) for a in range(0))
  |   ^ Syntax Error: assignment expression cannot rebind comprehension variable
6 | [[(a := 0)] for a in range(0)]
7 | [(a := 0) for b in range (0) for a in range(0)]
  |


  |
4 | {key: (a := 0) for a in range(0)}
5 | ((a := 0) for a in range(0))
6 | [[(a := 0)] for a in range(0)]
  |    ^ Syntax Error: assignment expression cannot rebind comprehension variable
7 | [(a := 0) for b in range (0) for a in range(0)]
8 | [(a := 0) for a in range (0) for b in range(0)]
  |


  |
5 | ((a := 0) for a in range(0))
6 | [[(a := 0)] for a in range(0)]
7 | [(a := 0) for b in range (0) for a in range(0)]
  |   ^ Syntax Error: assignment expression cannot rebind comprehension variable
8 | [(a := 0) for a in range (0) for b in range(0)]
9 | [((a := 0), (b := 1)) for a in range (0) for b in range(0)]
  |


  |
6 | [[(a := 0)] for a in range(0)]
7 | [(a := 0) for b in range (0) for a in range(0)]
8 | [(a := 0) for a in range (0) for b in range(0)]
  |   ^ Syntax Error: assignment expression cannot rebind comprehension variable
9 | [((a := 0), (b := 1)) for a in range (0) for b in range(0)]
  |


  |
7 | [(a := 0) for b in range (0) for a in range(0)]
8 | [(a := 0) for a in range (0) for b in range(0)]
9 | [((a := 0), (b := 1)) for a in range (0) for b in range(0)]
  |    ^ Syntax Error: assignment expression cannot rebind comprehension variable
  |


  |
7 | [(a := 0) for b in range (0) for a in range(0)]
8 | [(a := 0) for a in range (0) for b in range(0)]
9 | [((a := 0), (b := 1)) for a in range (0) for b in range(0)]
  |              ^ Syntax Error: assignment expression cannot rebind comprehension variable
  |
